Uploaded image for project: 'Core Server'
  1. Core Server
  2. SERVER-99290

Invalid timeseries buckets collections prevent completion of FCV 8.0 upgrade

    • Type: Icon: Bug Bug
    • Resolution: Fixed
    • Priority: Icon: Major - P3 Major - P3
    • 8.1.0-rc0, 8.0.5
    • Affects Version/s: 8.1.0-rc0, 8.0.0
    • Component/s: Catalog
    • None
    • Catalog and Routing
    • Fully Compatible
    • v8.0
    • CAR Team 2025-02-03
    • 1
    • None
    • 3
    • None
    • None
    • None
    • None
    • None
    • None

      SERVER-79630 in 8.0 we introduced a check that would prevent completion of FCV upgrade to 8.0 in the presence of system.buckets collection without timeseries options.

      We discovered that it is actually not uncommon for users to have inconsistent buckets collections. In fact, they can end-up in this inconsistent state due to bugs like SERVER-87678 or by explicitly creating an inconsistent bucket collection through the create command.

      So if a user with such an inconsistent bucket collection try to upgrade to FCV 8.0 it will get stuck in the kUpgrading phase, and it won't be able to complete the upgrade process until they fix the inconsistency. Additionally, since they already entered into the kUpgrading phase they won't be able to abort the FCV upgrade.

      Moreover, in Atlas, backup taken in this state (kUpgrading + inconsistent bucket collection) are unusable. In fact Atlas require to complete the FCV upgrade process after restoring the backup and before allowing the cluster to be used.

      The goal of this ticket is to relax the check introduced in SERVER-79630 and allow customer with inconsistent buckets collection to upgrade to FCV 8.0

      SERVER-79630 also added a check to prevent the creation of new inconsistent buckets collection that we want to maintain.

      The presence of system.buckets.-prefixed collections without the timeseries field can be checked before upgrading in one-shot by running the following aggregation stage:

      db.getSiblingDB('admin').aggregate([
      {$listCatalog: {}},
      {$match:
        {name: { $regex: /^system\.buckets\./ },
         "options.timeseries": null}}
      ]);
      

      Or by running the following code for each existing DBs in the cluster:

      db.getCollectionInfos({ name: { $regex: /^system\.buckets\./ }, "options.timeseries": null })
      

            Assignee:
            joan.bruguera-mico@mongodb.com Joan Bruguera Micó
            Reporter:
            joan.bruguera-mico@mongodb.com Joan Bruguera Micó
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: