SERVER-99290 Invalid timeseries buckets collections prevent completion of FCV 8.0 upgrade (#31361)

GitOrigin-RevId: 60a74202bb58e8cdf6bfd177aef006a5b354e654